# OSI

./: CMakeLists.txt
lab1/: CMakeLists.txt  child.c  file.txt  parent
lab1/doc/: 211_Акимов_Лаб1.docx
lab1/src/: child  parent.c
lab2/doc/: romashka
lab2/src/: filter_program  main2.c
lab3/doc/: 211_Акимов_Лаб3.docx
lab3/src/: child  child.c  file.txt  parent  parent.c
lab4/src/: allocator.h  allocator_2n.c  allocator_list.c  main  main.c
